// Copyright 2021 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package weetbix.v1;

import "infra/appengine/weetbix/proto/v1/analyzed_test_variant.proto";
import "infra/appengine/weetbix/proto/v1/common.proto";

option go_package = "infra/appengine/weetbix/proto/v1;weetbixpb";

// Represents a function Variant -> bool.
message VariantPredicate {
  oneof predicate {
    // A variant must be equal this definition exactly.
    Variant equals = 1;

    // A variant's key-value pairs must contain those in this one.
    Variant contains = 2;
  }
}

// Represents a function AnalyzedTestVariant -> bool.
message AnalyzedTestVariantPredicate {
  // A test variant must have a test id matching this regular expression
  // entirely, i.e. the expression is implicitly wrapped with ^ and $.
  string test_id_regexp = 1;

  // A test variant must have a variant satisfying this predicate.
  VariantPredicate variant = 2;

  // A test variant must have this status.
  AnalyzedTestVariantStatus status = 3;
}
